A little cleanup on my personal templates to match my final Spring 2021 layout

--- a/erika-templates/pages/CourseSchedule_flatWithMilestones.html
+++ b/erika-templates/pages/CourseSchedule_flatWithMilestones.html
@@ -39,7 +39,7 @@
                         <li><strong>All other assignments</strong> (quizzes, homeworks, project deliverables, etc.) are always due by 11:59pm ET on the due date.</li>
                     </ul>
                 </div>
-                <h2>Milestone 1: Team Formation</h2>
+                <h2>Sprint 1: Team Formation</h2>
                 <div class="table-responsive">
                     <table class="table" table-bordered="">
                         <thead>
@@ -162,7 +162,7 @@
                         </tbody>
                     </table>
                 </div>
-                <h2>Milestone 2: Initial Concept</h2>
+                <h2>Sprint 2: Initial Concept</h2>
                 <div class="table-responsive">
                     <table class="table" table-bordered="" style="height: 232px;">
                         <thead>
@@ -285,7 +285,7 @@
                         </tbody>
                     </table>
                 </div>
-                <h2>Milestone 3: Game Loop</h2>
+                <h2>Sprint 3: Game Loop</h2>
                 <div class="table-responsive">
                     <table class="table" table-bordered="">
                         <thead>
@@ -408,7 +408,7 @@
                         </tbody>
                     </table>
                 </div>
-                <h2>Milestone 4: Core Mechanics</h2>
+                <h2>Sprint 4: Core Mechanics</h2>
                 <div class="table-responsive">
                     <table class="table" table-bordered="">
                         <thead>
@@ -531,7 +531,7 @@
                         </tbody>
                     </table>
                 </div>
-                <h2>Milestone 5: Polish</h2>
+                <h2>Sprint 5: Polish</h2>
                 <div class="table-responsive">
                     <table class="table" table-bordered="">
                         <thead>
