Fall 2021 TR and MWF collapsing schedules + syllabus and policy template cleanup

--- a/erika-templates/pages/Communications.html
+++ b/erika-templates/pages/Communications.html
@@ -26,179 +26,53 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <h5>Erika S. Mesh</h5>
+                                    <h5>Faculty Name</h5>
                                     <h6>(Instructor)</h6>
-                                    <p>she/her/hers</p>
-                                    <p>Lecturer, IGM</p>
-                                    <p><a href="mailto:esmvcs@rit.edu">esmvcs@rit.edu</a></p>
-                                    <p>Github - esmesh</p>
+                                    <p>../../..</p>
+                                    <p>POSITION, IGM</p>
+                                    <p>email</p>
+                                    <p>Github - ...</p>
+                                    <p>Office Hours: </p>
                                 </td>
                                 <td>
-                                    <h5>Name</h5>
+                                    <h5>TA Name</h5>
                                     <h6>(Section # TA)</h6>
                                     <p>.../.../...</p>
                                     <p>email</p>
                                     <p>Github - ...</p>
+                                    <p>Office Hours: </p>
                                 </td>
                                 <td>
-                                    <h5>Name</h5>
+                                    <h5>TA Name</h5>
                                     <h6>(Section # TA)</h6>
                                     <p>.../.../...</p>
                                     <p>email</p>
                                     <p>Github - ...</p>
-                                </td>
-                                <td>
-                                    <h5>Name</h5>
-                                    <h6>(Section # TA)</h6>
-                                    <p>.../.../...</p>
-                                    <p>email</p>
-                                    <p>Github - ...</p>
+                                    <p>Office Hours: </p>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
                 <h2>Office Hours</h2>
-                <p>The TAs and I will hold regular office hours each week. Office hours offer you the opportunity to ask individual questions about the course material that you may have not had time to have addressed in class.</p>
-                <p>Office hours are held on a first-come-first-served drop-in basis with no appointment necessary. You can attend the office hours with any TA, regardless of which section you are in.&nbsp;</p>
-                <p>Sometimes office hours become increasingly busy the closer it is to a project deadline. If we have a line of students waiting, we will limit discussions to 10 minutes/student. Plan your use of office hours accordingly.</p>
-                <div class="table-responsive">
-                    <table class="table table-bordered" style="height: 288px; width: 760px;">
-                        <thead>
-                            <tr>
-                                <th scope="col"></th>
-                                <th scope="col" style="text-align: center;">Mondays</th>
-                                <th scope="col" style="text-align: center;">Tuesdays</th>
-                                <th scope="col" style="text-align: center;">Wednesdays</th>
-                                <th scope="col" style="text-align: center;">Thursdays</th>
-                                <th scope="col" style="text-align: center;">Fridays</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td style="height: 69px; width: 254px;">
-                                    <h5>Erika S. Mesh</h5>
-                                    <p><a href="https://rit.zoom.us/my/esmvcs" target="_blank" rel="noopener">https://rit.zoom.us/my/esmvcs</a></p>
-                                    <p><em>Individual appointments may also be arranged with me at other times via Starfish.</em></p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td style="height: 69px; width: 254px;">
-                                    <h5>Name</h5>
-                                    <p>zoom link</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td style="height: 62px; width: 254px;">
-                                    <h5>Name</h5>
-                                    <p>zoom link</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                            </tr>
-                            <tr style="height: 122px;">
-                                <td style="height: 68px; width: 254px;">
-                                    <h5>Name</h5>
-                                    <p>zoom link</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                                <td style="text-align: center;">
-                                    <p>...</p>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <h2>Zoom</h2>
-                <p>Make sure you know what section you are in! I have everything for all of my sections merged into a single course shell to make sure I always give you all the same information.</p>
-                <ul>
-                    <li>...</li>
-                </ul>
-                <p>Upon joining the Zoom meeting, you'll be placed in a "waiting room":</p>
-                <ul>
-                    <li>Please be patient. The TAs will be admitting you one by one as they check off your name on our attendance register.</li>
-                    <li>If your name isn't on the register for the section you tried to join, you won't be admitted.</li>
-                    <li>I have time built into the schedule for this process. I promise you won't miss anything!</li>
-                </ul>
-                <p>Once you're in the Zoom meeting:</p>
-                <ul>
-                    <li>Again, please be patient while your classmates are being admitted.</li>
-                    <li>Feel free to turn on your cameras &amp; mics for a bit. I'll be there to say hi, chat, etc. (much as I would right before class if we were in person).</li>
-                </ul>
-                <p>Do NOT use the chat for casual conversation!</p>
-                <ul>
-                    <li>I want to keep the chat to course content only so that it's easy for the TAs to relay questions to me and so that I can export it for your reference later.</li>
-                </ul>
-                <p>All lectures will be recorded and accessible via myCourses later.</p>
-                <ul>
-                    <li>Chat time in the beginning, open Q&amp;A, breakout group activities, etc. will not be recorded (this is for your privacy).</li>
-                    <li>Even though lectures will be recorded, you are still required to attend class!</li>
-                </ul>
-                <p>You can add all Zoom meetings (and assignment due dates, etc.) to your Google Calendar by subscribing to the myCourses calendar feed: Link your Google Calendar to myCourses</p>
+                <p>Office hours offer you the opportunity to ask individual questions about the course material that you may have not had time to ask in class.</p>
+                <p>Office hours are held on a first-come-first-served drop-in basis with no appointment necessary. Sometimes office hours become increasingly busy the closer it is to a deadline. If students are waiting, discussions will be limited to ~10 minutes/student. Plan your use of office hours accordingly.</p>
+
                 <h2>General Questions or Discussions</h2>
                 <p>If you have general questions about the course or an assignment that are not covered in these course documents, please post your questions to a public channel in Slack so all students can benefit from the answer. If, as a student, you can answer a question posed, I encourage you to reply to your classmate.</p>
-                <p>If you have a question about your particular implementation, grade, etc, please email me.</p>
+
                 <h2>Personal Topics</h2>
-                <p><strong>All official communications should occur between your RIT e-mail address and the faculty&rsquo;s RIT e-mail address.</strong> Furthermore, faculty may not be able to respond to requests that do not originate from an RIT e-mail. Please make sure to use only the email address noted above. I do have others associated with RIT, but I do NOT check them regularly!</p>
-                <p>Always include a subject line and be sure to mention the class name and section. It&rsquo;s also expected that you use complete sentences and punctuation, as well as sign your name.</p>
-                <p>Announcements and other messages may also be sent using the facilities for sending mass emails available in myCourses. Since you may request re-grades of work only within a set period from the time that the feedback was provided to you, and course announcements could provide you with important information, it is in your best interest to read your RIT e-mail account daily.</p>
-                <p>I check my email frequently; this is usually the fastest way to reach me. If you do not receive a response from me within 24 hours, Monday-Friday, contact me again as it is likely I missed your first message. Emails delivered over the weekend may take slightly longer for a response.</p>
+                <p><strong>If you have a question about your particular assignment, grade, etc, please contact me privately.</strong></p>
+
+                <p><strong>All official communications should be done using RIT accounts (email or Slack).</strong> Furthermore, faculty may not be able to respond to requests that do not originate from an RIT account.</p>
+
+                <p><strong>I check email and Slack frequently, but Slack DMs are usually the fastest way to reach me.</strong> If you do not receive a response from me within 24 hours, Monday-Friday, contact me again as it is likely I missed your first message. Messages over the weekend may take slightly longer for a response.</p>
+
+                <p><strong>When using email, please make sure to use only the email address noted above.</strong> I do have others associated with RIT, but I do NOT check them! Always include a subject line and be sure to mention the class name and section. It&rsquo;s also expected that you use complete sentences and punctuation, as well as sign your name.</p>
+
                 <h2>myCourses Announcements</h2>
-                <p>I will provide any course announcements through the Announcements on the Course Home Page. This includes any updates or changes to assignments or other course assignments, as well as general comments about assignment results or discussions. <strong>Please check your RIT e-mail &amp; myCourses daily for important notifications</strong></p>
+                <p>I will provide any course announcements through the Announcements on the Course Home Page. This includes any updates or changes to assignments or other course assignments, as well as general comments about assignment results or discussions. <strong>Please check your RIT e-mail &amp; myCourses daily for important notifications.</strong></p>
+
                 <h2>Slack</h2>
                 <p><strong>Slack is NOT a replacement for attending class, studying, doing assignments, etc!</strong></p>
                 <p>Slack is a way to <em>extend our time together and build community</em> in a more casual way - especially since we cannot hang out after class, in my office, etc.</p>
@@ -214,6 +88,17 @@
                     <li>DO share links or examples that seem useful.</li>
                     <li>DO have fun. You can do a lot of fun stuff in this course if you're willing to try and this is a great opportunity to get to know your classmates!</li>
                 </ul>
+
+                <h2>Name &amp; Pronouns</h2>
+                <p>Many people go by a name in daily life that is different from their legal name. In this course, we seek to address everyone in the manner that best respects their identity. You are invited (publicly or privately) to share the name and pronouns you wish us to use.</p>
+                <p>Additionally, you can:</p>
+                <ul>
+                    <li>Set a "nickname" in myCourses&nbsp; by clicking on your name in the top right corner and selecting "Profile"</li>
+                    <li>Change your "preferred name" in other RIT systems by going to <a href="https://start.rit.edu/">https://start.rit.edu/</a>&nbsp;--&gt; Directory Information --&gt; Name Preferences Page</li>
+                </ul>
+                <p>If you would like your name changed in legal documents (transcripts, etc.), complete&nbsp;<a href="https://www.rit.edu/academicaffairs/registrar/change-name" target="_blank" rel="noopener">this form</a> and return it to the Registrar's Office.</p>
+
+
             </div>
             <div class="col-12">
                 <footer>
