--- a/erika-templates/pages/MWF_CourseSchedule_sprints.html
+++ b/erika-templates/pages/MWF_CourseSchedule_sprints.html
@@ -23,13 +23,13 @@
                 <h4>A full, week by week course schedule of topics and due dates is below.<br />This is subject to change!</h4>
                 <h3>Important Dates</h3>
                 <ul>
-                    <li><strong>M 2/1: Last day of Add/Drop period</strong></li>
-                    <li>T 2/23: Recharge Day #1 (No classes)</li>
-                    <li><strong>W 3/24: Recharge Day #2 (No classes)</strong></li>
-                    <li><strong>F 4/9: Last day to drop from classes with a grade of "W"</strong></li>
-                    <li>R 4/22: Recharge Day #3 (No classes)</li>
-                    <li><strong>M 5/3: Treat as a Thursday class day</strong></li>
-                    <li><strong>W 5/5: Last day, evening, and online classes</strong></li>
+                    <li>8/30: Last day of Add/Drop period</li>
+                    <li>9/6: Labor Day - no classes</li>
+                    <li>10/11-12: Fall Break - no classes</li>
+                    <li>11/5: Last day to drop from classes with a grade of "W"</li>
+                    <li>11/24: No classes - University closes at 2pm</li>
+                    <li>11/25-26: Thanksgiving Holiday - University closed</li>
+                    <li>12/6: Last day, evening, and online classes</li>
                 </ul>
                 <div class="card card-standard">
                     <p>The times at which assignments are due on the dates shown depend on their type:</p>
