--- a/erika-templates/pages/Syllabus.html
+++ b/erika-templates/pages/Syllabus.html
@@ -22,7 +22,7 @@
             <div class="col-sm-10 offset-sm-1">
                 <h2>Course Overview</h2>
                 <p>Summary...</p>
-                <p>This semester, I am teaching 3 sections of this course. To faciliate consistency, all sections have been "merged" into a single myCourses shell. Unless otherwise stated, all due dates, etc. will be the same for all of my sections.</p>
+                <p>This semester, I am teaching XXX sections of this course. To faciliate consistency, all sections have been "merged" into a single myCourses shell. Unless otherwise stated, all due dates, etc. will be the same for all of my sections.</p>
                 <p>However, each section will meet at their assigned time and project teams will only include students all from the same section. As such, <strong>please</strong> make sure you know in which section you are enrolled and when it meets.</p>
                 <div class="table-responsive">
                     <table class="table table-bordered">
@@ -66,13 +66,13 @@
 
                 <h2>Important RIT Deadlines</h2>
                 <ul>
-                    <li><strong>M 2/1: Last day of Add/Drop period</strong></li>
-                    <li>T 2/23: Recharge Day #1 (No classes)</li>
-                    <li><strong>W 3/24: Recharge Day #2 (No classes)</strong></li>
-                    <li><strong>F 4/9: Last day to drop from classes with a grade of "W"</strong></li>
-                    <li>R 4/22: Recharge Day #3 (No classes)</li>
-                    <li><strong>M 5/3: Treat as a Thursday class day</strong></li>
-                    <li><strong>W 5/5: Last day, evening, and online classes</strong></li>
+                    <li>8/30: Last day of Add/Drop period</li>
+                    <li>9/6: Labor Day - no classes</li>
+                    <li>10/11-12: Fall Break - no classes</li>
+                    <li>11/5: Last day to drop from classes with a grade of "W"</li>
+                    <li>11/24: No classes - University closes at 2pm</li>
+                    <li>11/25-26: Thanksgiving Holiday - University closed</li>
+                    <li>12/6: Last day, evening, and online classes</li>
                 </ul>
 
                 <h2>Texts & Materials</h2>
@@ -173,16 +173,6 @@
                         </div>
                     </div>
                 </div>
-                <h3>Passing the Class (i.e. the "GDAPS 70% threshold rule")</h3>
-                <p>A grade of 70% (C-) or higher is required to pass this course and move on to IGME-106. This threshold applies to the overall course grade AND the homework and exam elements!</p>
-                <ul>
-                    <li>AVERAGE OVERALL GRADE OF 70% REQUIRED TO PASS</li>
-                    <li>AVERAGE HOMEWORK GRADE OF 70% REQUIRED TO PASS</li>
-                    <li>AVERAGE WEIGHTED EXAM GRADE OF 70% REQUIRED TO PASS</li>
-                </ul>
-                <p>In other words, if your individual exam or homework average is less than 70%, you will <strong>not</strong> earn a passing grade <strong>regardless</strong> of your performance in other areas of the course.</p>
-                <p>This rule is department policy, applies to all sections of this course, and will not be waived for any reason.</p>
-                <p><em>If at any time, you are concerned about your performance or progress in this course, you should not hesitate to contact your instructor and discuss it.</em></p>
                 <h2>Course Elements</h2>
                 <h3>ELEMENT (X%)</h3>
                 <p>DESCRIPTION</p>
