Added TEMPLATE warnings at the top of each page

--- a/igm_mycourses_templates/topic.html
+++ b/igm_mycourses_templates/topic.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS (will eventually be replaced with local CSS file)-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!-- Template CSS -->
 
@@ -16,6 +16,11 @@
 </head>
 
 <body>
+    <div class="jumbotron">
+        <strong>TEMPLATE</strong>
+        <p>This page was created from a template. Update with the correct content for your course and remove this header before sharing with students!</p>
+    </div>
+
     <h2>Topic Overview</h2>
     <p>...</p>
 
@@ -33,6 +38,4 @@
         <li>...</li>
     </ol>
 
-</body>
-
-</html>
+</body></html>
