--- a/igm_mycourses_templates/tr_schedule_sprints.html
+++ b/igm_mycourses_templates/tr_schedule_sprints.html
@@ -6,12 +6,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Bootstrap CSS (will eventually be replaced with local CSS file)-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+
     <link rel="stylesheet" href="custom.css">
     <link rel="stylesheet" href="schedule.css">
     <title>Course Schedule</title>
 </head>
 
 <body>
+    <div class="jumbotron">
+        <strong>TEMPLATE</strong>
+        <p>This page was created from a template. Update with the correct content for your course and remove this header before sharing with students!</p>
+    </div>
 
     <h2>Important Dates, Spring 2022 (2215)</h2>
     <div class="content">
@@ -683,6 +691,4 @@
 
     </div>
 
-</body>
-
-</html>
+</body></html>
