--- a/igm_mycourses_templates/mwf_schedule_weeks.html
+++ b/igm_mycourses_templates/mwf_schedule_weeks.html
@@ -41,19 +41,17 @@
     <p class="intro">A full, week by week course schedule of topics and due dates is below. This is subject to change!
 
     <details>
-        <summary>Sprint 0: Course Kickoff & Team Formation</summary>
+        <summary>Week 1: ???</summary>
         <div class="content">
             <table style="width:100%">
                 <colgroup>
                     <col span="1" style="width: 10%;">
-                    <col span="1" style="width: 10%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 27%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
                 </colgroup>
                 <thead>
                     <tr>
-                        <th>Week</th>
                         <th>Date</th>
                         <th>Topic</th>
                         <th>References</th>
@@ -62,9 +60,6 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td rowspan="3">
-                            <h4>1</h4>
-                        </td>
                         <td>
                             <p>Mon 1/10</p>
                         </td>
@@ -106,10 +101,30 @@
                             <p></p>
                         </td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+    </details>
+    <details>
+        <summary>Week 2: ???</summary>
+        <div class="content">
+            <table style="width:100%">
+                <colgroup>
+                    <col span="1" style="width: 10%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                </colgroup>
+                <thead>
                     <tr>
-                        <td rowspan="3">
-                            <h4>2</h4>
-                        </td>
+                        <th>Date</th>
+                        <th>Topic</th>
+                        <th>References</th>
+                        <th>Assignments Due</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
                         <td>
                             <p>Mon 1/17</p>
                         </td>
@@ -156,19 +171,17 @@
         </div>
     </details>
     <details>
-        <summary>Sprint 1: ???</summary>
+        <summary>Week 3: ???</summary>
         <div class="content">
             <table style="width:100%">
                 <colgroup>
                     <col span="1" style="width: 10%;">
-                    <col span="1" style="width: 10%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 27%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
                 </colgroup>
                 <thead>
                     <tr>
-                        <th>Week</th>
                         <th>Date</th>
                         <th>Topic</th>
                         <th>References</th>
@@ -177,9 +190,6 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td rowspan="3">
-                            <h4>3</h4>
-                        </td>
                         <td>
                             <p>Mon 1/24</p>
                         </td>
@@ -221,10 +231,30 @@
                             <p></p>
                         </td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+    </details>
+    <details>
+        <summary>Week 4: ???</summary>
+        <div class="content">
+            <table style="width:100%">
+                <colgroup>
+                    <col span="1" style="width: 10%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                </colgroup>
+                <thead>
                     <tr>
-                        <td rowspan="3">
-                            <h4>4</h4>
-                        </td>
+                        <th>Date</th>
+                        <th>Topic</th>
+                        <th>References</th>
+                        <th>Assignments Due</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
                         <td>
                             <p>Mon 1/31</p>
                         </td>
@@ -266,10 +296,30 @@
                             <p></p>
                         </td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+    </details>
+    <details>
+        <summary>Week 5: ???</summary>
+        <div class="content">
+            <table style="width:100%">
+                <colgroup>
+                    <col span="1" style="width: 10%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                </colgroup>
+                <thead>
                     <tr>
-                        <td rowspan="3">
-                            <h4>5</h4>
-                        </td>
+                        <th>Date</th>
+                        <th>Topic</th>
+                        <th>References</th>
+                        <th>Assignments Due</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
                         <td>
                             <p>Mon 2/7</p>
                         </td>
@@ -316,19 +366,17 @@
         </div>
     </details>
     <details>
-        <summary>Sprint 2: ???</summary>
+        <summary>Week 6: ???</summary>
         <div class="content">
             <table style="width:100%">
                 <colgroup>
                     <col span="1" style="width: 10%;">
-                    <col span="1" style="width: 10%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 27%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
                 </colgroup>
                 <thead>
                     <tr>
-                        <th>Week</th>
                         <th>Date</th>
                         <th>Topic</th>
                         <th>References</th>
@@ -337,9 +385,6 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td rowspan="3">
-                            <h4>6</h4>
-                        </td>
                         <td>
                             <p>Mon 2/14</p>
                         </td>
@@ -381,10 +426,30 @@
                             <p></p>
                         </td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+    </details>
+    <details>
+        <summary>Week 7: ???</summary>
+        <div class="content">
+            <table style="width:100%">
+                <colgroup>
+                    <col span="1" style="width: 10%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                </colgroup>
+                <thead>
                     <tr>
-                        <td rowspan="3">
-                            <h4>7</h4>
-                        </td>
+                        <th>Date</th>
+                        <th>Topic</th>
+                        <th>References</th>
+                        <th>Assignments Due</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
                         <td>
                             <p>Mon 2/21</p>
                         </td>
@@ -426,10 +491,30 @@
                             <p></p>
                         </td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+    </details>
+    <details>
+        <summary>Week 8: ???</summary>
+        <div class="content">
+            <table style="width:100%">
+                <colgroup>
+                    <col span="1" style="width: 10%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                </colgroup>
+                <thead>
                     <tr>
-                        <td rowspan="3">
-                            <h4>8</h4>
-                        </td>
+                        <th>Date</th>
+                        <th>Topic</th>
+                        <th>References</th>
+                        <th>Assignments Due</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
                         <td>
                             <p>Mon 2/28</p>
                         </td>
@@ -476,19 +561,17 @@
         </div>
     </details>
     <details>
-        <summary>Sprint 3: ???</summary>
+        <summary>Spring Break!</summary>
         <div class="content">
             <table style="width:100%">
                 <colgroup>
                     <col span="1" style="width: 10%;">
-                    <col span="1" style="width: 10%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 27%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
                 </colgroup>
                 <thead>
                     <tr>
-                        <th>Week</th>
                         <th>Date</th>
                         <th>Topic</th>
                         <th>References</th>
@@ -497,9 +580,6 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td rowspan="3">
-                            <h4>Spring Break!</h4>
-                        </td>
                         <td>
                             <p>Mon 3/7</p>
                         </td>
@@ -541,10 +621,30 @@
                             <p></p>
                         </td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+    </details>
+    <details>
+        <summary>Week 9: ???</summary>
+        <div class="content">
+            <table style="width:100%">
+                <colgroup>
+                    <col span="1" style="width: 10%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                </colgroup>
+                <thead>
                     <tr>
-                        <td rowspan="3">
-                            <h4>9</h4>
-                        </td>
+                        <th>Date</th>
+                        <th>Topic</th>
+                        <th>References</th>
+                        <th>Assignments Due</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
                         <td>
                             <p>Mon 3/14</p>
                         </td>
@@ -586,10 +686,30 @@
                             <p></p>
                         </td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+    </details>
+    <details>
+        <summary>Week 10: ???</summary>
+        <div class="content">
+            <table style="width:100%">
+                <colgroup>
+                    <col span="1" style="width: 10%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                </colgroup>
+                <thead>
                     <tr>
-                        <td rowspan="3">
-                            <h4>10</h4>
-                        </td>
+                        <th>Date</th>
+                        <th>Topic</th>
+                        <th>References</th>
+                        <th>Assignments Due</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
                         <td>
                             <p>Mon 3/21</p>
                         </td>
@@ -631,10 +751,30 @@
                             <p></p>
                         </td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+    </details>
+    <details>
+        <summary>Week 11: ???</summary>
+        <div class="content">
+            <table style="width:100%">
+                <colgroup>
+                    <col span="1" style="width: 10%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                </colgroup>
+                <thead>
                     <tr>
-                        <td rowspan="3">
-                            <h4>11</h4>
-                        </td>
+                        <th>Date</th>
+                        <th>Topic</th>
+                        <th>References</th>
+                        <th>Assignments Due</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
                         <td>
                             <p>Mon 3/28</p>
                         </td>
@@ -681,19 +821,17 @@
         </div>
     </details>
     <details>
-        <summary>Sprint 4: ???</summary>
+        <summary>Week 12: ???</summary>
         <div class="content">
             <table style="width:100%">
                 <colgroup>
                     <col span="1" style="width: 10%;">
-                    <col span="1" style="width: 10%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 26%;">
-                    <col span="1" style="width: 27%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
                 </colgroup>
                 <thead>
                     <tr>
-                        <th>Week</th>
                         <th>Date</th>
                         <th>Topic</th>
                         <th>References</th>
@@ -702,9 +840,6 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td rowspan="3">
-                            <h4>12</h4>
-                        </td>
                         <td>
                             <p>Mon 4/4</p>
                         </td>
@@ -746,10 +881,30 @@
                             <p></p>
                         </td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+    </details>
+    <details>
+        <summary>Week 13: ???</summary>
+        <div class="content">
+            <table style="width:100%">
+                <colgroup>
+                    <col span="1" style="width: 10%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                </colgroup>
+                <thead>
                     <tr>
-                        <td rowspan="3">
-                            <h4>13</h4>
-                        </td>
+                        <th>Date</th>
+                        <th>Topic</th>
+                        <th>References</th>
+                        <th>Assignments Due</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
                         <td>
                             <p>Mon 4/11</p>
                         </td>
@@ -791,10 +946,30 @@
                             <p></p>
                         </td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+    </details>
+    <details>
+        <summary>Week 14: ???</summary>
+        <div class="content">
+            <table style="width:100%">
+                <colgroup>
+                    <col span="1" style="width: 10%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                </colgroup>
+                <thead>
                     <tr>
-                        <td rowspan="3">
-                            <h4>14</h4>
-                        </td>
+                        <th>Date</th>
+                        <th>Topic</th>
+                        <th>References</th>
+                        <th>Assignments Due</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
                         <td>
                             <p>Mon 4/18</p>
                         </td>
@@ -836,10 +1011,30 @@
                             <p></p>
                         </td>
                     </tr>
+                </tbody>
+            </table>
+        </div>
+    </details>
+    <details>
+        <summary>Week 15: ???</summary>
+        <div class="content">
+            <table style="width:100%">
+                <colgroup>
+                    <col span="1" style="width: 10%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                    <col span="1" style="width: 30%;">
+                </colgroup>
+                <thead>
                     <tr>
-                        <td>
-                            <h4>15</h4>
-                        </td>
+                        <th>Date</th>
+                        <th>Topic</th>
+                        <th>References</th>
+                        <th>Assignments Due</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
                         <td>
                             <p>Mon 4/25</p>
                         </td>
@@ -857,6 +1052,7 @@
             </table>
         </div>
     </details>
+
     <h3>Do NOT make travel plans for the finals period until ALL of your exam times have been set for ALL classes.</h3>
     <details open>
         <summary>Finals Week</summary>
@@ -888,4 +1084,6 @@
         </div>
     </details>
 
-</body></html>
+</body>
+
+</html>
